# AFFGA_binpicking_ur5e

./: CMakeLists.txt  README.md  package.xml
launch/: grasp_affga.launch
msg/: graspPose.msg
scripts/: detect_grasps.py  policy.py  robotiq.py
scripts/grasp_methods/affga_net/sgdn/: sgdn.py  test.py  tool.py
scripts/grasp_methods/affga_net/sgdn/models/: __init__.py
scripts/grasp_methods/affga_net/sgdn/models/affga/: decoder.py  deeplab.py  hasp.py
scripts/grasp_methods/affga_net/sgdn/models/affga/backbone/: __init__.py  drn.py  mobilenet.py  resnet.py  xception.py
scripts/grasp_methods/affga_net/sgdn/utils/: img.py
scripts/ur/: ur5e.py  ur5e_cartesian_controler.py
scripts/utils/: camera.py  grasp.py  tool.py
